# spec-oxide

./: .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  Cargo.toml  README.md
.claude/: CLAUDE.md  settings.json
.devcontainer/: Dockerfile  devcontainer.json  docker.sh
.github/workflows/: ci.yml
.serena/: project.yml
.spox/: .gitignore  config.toml  setup.sh  update.sh
docs/: README.md  _sidebar.md  cli.md  configuration.md  index.html  mcp.md  rules.md  setup-guide.md  setup.md  spec-standards.md  user-guide.md  workflow.md
specs/: mission.md
specs/_changes/add-mcp-server/: design.md  proposal.md  tasks.md  verification.md
specs/cli/: spec.md
specs/config/: spec.md
specs/core/: spec.md
specs/init/: spec.md
specs/mcp/: spec.md
specs/templates/: spec.md
specs/validation/: spec.md
specs/workflow/: spec.md
src/: cli.rs  config.rs  config_cmd.rs  error.rs  index_cmd.rs  init.rs  list_cmd.rs  main.rs  mcp_cmd.rs  show_cmd.rs  validate_cmd.rs
src/cli/: commands.rs  mod.rs  render.rs
src/core/: config.rs  error.rs  index.rs  mod.rs  spec.rs  validate.rs  version_lock.rs
src/mcp/: mod.rs
src/show/: change.rs  dashboard.rs  mod.rs  project.rs  spec.rs
src/validate/: change.rs  mod.rs  parser.rs  spec.rs  tasks.rs
templates/claude/: gitignore
templates/claude/agents/: spox-implementer.md  spox-reviewer.md  spox-verifier.md
templates/specs/: mission.md  spec.md
templates/specs/change/: design.md  proposal.md  spec.md  tasks.md  verification.md
templates/spox/: CLAUDE-template.md  config.toml  gitignore  setup.sh  workflow.md
templates/spox/standards/: backend.md  coding.md  frontend.md  global.md  mcp.md  testing.md  vcs.md
tests/: change_list.rs  change_show.rs  change_validate.rs  cli_tests.rs  dashboard_show.rs  index_cmd.rs  mcp_cmd.rs  mcp_tools.rs  spec_list.rs  spec_show.rs  spec_validate.rs
(+8 files in other folders)
