[package]
name = "spec-oxide"
version = "0.2.0"
authors = ["Marco Nätlitz"]
edition = "2021"
description = "Spec-driven development for humans and AI"
license = "MIT"

[[bin]]
name = "spox"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
