[package]
name = "spec-oxide"
version = "0.5.0"
authors = ["Marco Nätlitz"]
edition = "2021"
description = "Spec-driven development for humans and AI"
homepage = "https://marconae.github.io/spec-oxide/"
license = "MIT"

[[bin]]
name = "spox"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "0.9.8"
semver = "1"

# MCP server dependencies
rmcp = { version = "0.1", features = ["server", "transport-io"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1"
schemars = "0.8"
fastembed = "4"
bincode = "1"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
serial_test = "3"
